[tool.poetry]
name = "rust-game-server-docker"
version = "0.1.0"
description = ""
authors = ["Max Pfeiffer <max@maxpfeiffer.ch>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
click = "8.1.7"
python-on-whales = "0.73.0"
steam = {git = "https://github.com/detiam/steam_websocket.git", branch = "master", extras=["client"]}

[tool.poetry.group.dev.dependencies]
bcrypt = "4.2.0"
furl = "2.1.3"
pytest = "8.3.3"
pytest-cov = "5.0.0"
pre-commit = "4.0.1"
ruff = "0.7.1"
testcontainers = "4.8.2"

[tool.ruff]
exclude = [".venv"]

[tool.ruff.lint]
select = [
    "F", # Pyflakes
    "E", # pycodestyle
    "W", # pycodestyle
    "I", # isort
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "ASYNC", # flake8-async
    "RUF",  # Ruff-specific rules
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

# https://docs.pytest.org/en/latest/reference/customize.html
[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
