[tool.poetry]
name = "rust-game-server-docker"
version = "1.2.0"
description = "Docker container providing a Rust dedicated game server"
authors = ["Max Pfeiffer <max@maxpfeiffer.ch>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
click = "8.3.0"
python-on-whales = "0.79.0"
steam = {git = "https://github.com/detiam/steam_websocket.git", branch = "master", extras=["client"]}

[tool.poetry.group.dev.dependencies]
bcrypt = "5.0.0"
furl = "2.1.4"
pre-commit = "4.5.0"
pytest = "8.4.2"
pytest-cov = "7.0.0"
testcontainers = "4.13.2"

[tool.ruff]
exclude = [".venv"]

[tool.ruff.lint]
select = [
    "F", # Pyflakes
    "E", # pycodestyle
    "W", # pycodestyle
    "I", # isort
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "ASYNC", # flake8-async
    "RUF",  # Ruff-specific rules
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

# https://docs.pytest.org/en/latest/reference/customize.html
[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
