[project]
name = "rust-game-server-docker"
version = "2.0.3"
description = "Docker container providing a Rust dedicated game server"
authors = [{ name = "Max Pfeiffer", email = "max@maxpfeiffer.ch" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click==8.4.2",
    "python-on-whales==0.81.0",
    "steam[client]",
]

[dependency-groups]
dev = [
    "bcrypt==5.0.0",
    "furl==2.1.4",
    "pre-commit==4.6.0",
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "testcontainers==4.14.2",
]

[tool.uv]
package = false

[tool.uv.sources]
steam = { git = "https://github.com/detiam/steam_websocket.git", branch = "master" }

[tool.ruff]
src = ["build", "tests"]
extend-exclude = ["charts", "examples"]

[tool.ruff.lint]
select = [
    "F", # Pyflakes
    "E", # pycodestyle
    "W", # pycodestyle
    "I", # isort
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "ASYNC", # flake8-async
    "RUF",  # Ruff-specific rules
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

# https://docs.pytest.org/en/latest/reference/customize.html
[tool.pytest.ini_options]
testpaths = [
    "tests",
]
